# tdesktop-mtproto

./: .gitignore  CMakeLists.txt  README.md  build.bat
include/desktop_mtproto/: client.h
include/tdesktop_mtproto/: mtproto.h
python/: __init__.py  desktop_mtproto.py  tl.py  tl_constructors.py  tl_schema.py
src/api/: wrapper.cpp
src/core/: core.cpp
src/crypto/: aes_ige.cpp  sha.cpp
src/mtproto/: auth_key.cpp  connection.cpp  init_connection.cpp  msg_id.cpp  session.cpp  transport.cpp
src/python/: bridge.cpp  tdesktop_mtproto.py
src/tl/: serializer.cpp
tests/: test_main.cpp
tools/: generate_code.py  generate_schema.py
